--- a/client/src/Components/create/create.module.css
+++ b/client/src/Components/create/create.module.css
@@ -30,3 +30,97 @@
     margin-right: 15px;
     width: 33%;
 }
+.inputWrapperImgFirst{
+  width: 400px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+
+.inputWrapperImgFirst  span{
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    background-color:teal;
+    color: #fff;
+    border: 1px solid transparent;
+    cursor: pointer;
+    transition: 150ms all;
+    border-radius: 16px;
+    margin: 0.1rem 2.5rem;
+}
+.inputWrapperImgFirst span:hover{
+    background-color: #fff;
+    color: teal;
+    border-color: teal;
+}
+
+.inputWrapperImgSecond{
+    width: 400px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.5rem;
+  }
+  
+  .inputWrapperImgSecond  span{
+      display: inline-block;
+      padding: 0.5rem 1rem;
+      background-color:teal;
+      color: #fff;
+      border: 1px solid transparent;
+      cursor: pointer;
+      transition: 150ms all;
+      border-radius: 16px;
+      margin: 0.1rem 2.5rem;
+      margin-left: 1rem;
+  }
+  .inputWrapperImgSecond span:hover{
+      background-color: #fff;
+      color: teal;
+      border-color: teal;
+  }
+.imageName{
+    position: absolute;
+    right: 33.75rem;
+    display: flex;
+    align-items: center;
+    grid-template: 6px;
+    font-size: 14px;
+}
+.closeIcons{
+   cursor: pointer;
+   font-size: 16px;
+}
+.input{
+    padding: 0.55rem;
+    width: 77.5%;
+    border-radius: 8px;
+    border: 1px solid rgb(170,165,165);
+}
+.input:focus{
+    outline: none;
+    border-color: rgb(74,67,67);
+}
+.buttonWrapper{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2px;
+
+}
+.submitBtn{
+    width: 50%;
+    background-color: #cea600;
+    color: #fff;
+    padding: 0.75rem 1.75rem;
+    border-radius: 12px;
+    border: 1px solid transparent;
+    transition: 150ms all;
+    cursor: pointer;
+    margin-top: 1rem;
+    font-size: 18px;
+}
+.submitBtn:hover{
+    background-color: #fff;
+    color: #cea600;
+    border-color: #cea600;
+}
