--- a/client/src/Components/Navbar/navbar.module.css
+++ b/client/src/Components/Navbar/navbar.module.css
@@ -30,7 +30,7 @@
     text-decoration: none;
     color: inherit;
 }
-.username{
+.username1{
     text-transform: capitalize;
     cursor:default
 }
